[package]
name = "cssparse"
version = "0.1.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "cssparse"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.2"

[dependencies]
cssparser = "0.27"
servo_url = { path = "servo/components/url" }
style = { path = "servo/components/style", features = ["servo", "servo-layout-2013"] }
style_traits = { path = "servo/components/style_traits"}

[dependencies.neon]
version = "0.4.2"
default-features = false
features = ["napi-runtime"]
